Fixed i18n properties. Added new answers.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -173,7 +173,7 @@ jttp.reporting.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00
 jttp.reporting.close=Bez\u00e1r\u00e1s
 jttp.reporting.send=K\u00fcld\u00e9s
 
-jttp.reporting.desc=K\u00f6sz\u00f6nj\u00fck az \u00e9rdekl\u0151d\u00e9s\u00e9t! Ez a funkci\u00f3 jelenleg fejleszt\u00e9s alatt \u00e1ll.<br/>Szeretn\u00e9nk egy k\u00f6nnyen kezelhet\u0151 \u00e9s rugalmas munkanapl\u00f3 ki\u00e9rt\u00e9kel\u0151 eszk\u00f6zt \u00e1tadni, ami megk\u00f6nny\u00edti a vezet\u0151s\u00e9g munk\u00e1j\u00e1t.<br/><br/><strong>Ehhez szeretn\u00e9nk most a seg\u00edts\u00e9g\u00e9t k\u00e9rni. K\u00e9rj\u00fck, t\u00f6ltse ki a k\u00e9rd\u0151\u00edvet, hogy a legjobban megfelelj\u00fcnk az ig\u00e9nyeinek!<strong/>
+jttp.reporting.desc=K\u00f6sz\u00f6nj\u00fck az \u00e9rdekl\u0151d\u00e9s\u00e9t! Ez a funkci\u00f3 jelenleg fejleszt\u00e9s alatt \u00e1ll.<br/>Szeretn\u00e9nk egy k\u00f6nnyen kezelhet\u0151 \u00e9s rugalmas munkanapl\u00f3 ki\u00e9rt\u00e9kel\u0151 eszk\u00f6zt ny\u00fajtani, ami megk\u00f6nny\u00edti a vezet\u0151s\u00e9g munk\u00e1j\u00e1t.<br/><br/><strong>Ehhez szeretn\u00e9nk most a seg\u00edts\u00e9g\u00e9t k\u00e9rni. K\u00e9rj\u00fck, t\u00f6ltse ki a k\u00e9rd\u0151\u00edvet, hogy a legjobban megfelelj\u00fcnk az ig\u00e9nyeinek!<strong/>
 jttp.reporting.question.1=Milyen megjelen\u00edt\u00e9si form\u00e1t kedvel?
 jttp.reporting.question.2=Milyen keres\u00e9si felt\u00e9teleket haszn\u00e1lna?
 jttp.reporting.question.3=Milyen f\u0151 dimenzi\u00f3k ment\u00e9n szeretn\u00e9 az adatokat vizsg\u00e1lni?
@@ -186,7 +186,7 @@ jttp.reporting.question.9=Milyen r\u00e9szleteket szeretne l\u00e1tni az Issue-r
 
 jttp.reporting.answer.1.1=T\u00e1bl\u00e1zat
 jttp.reporting.answer.1.2=Lista
-jttp.reporting.answer.1.3=Strukt\u00far\u00e1lt
+jttp.reporting.answer.1.3=Struktur\u00e1lt
 jttp.reporting.answer.1.4=Timesheet
 
 jttp.reporting.answer.2.1=Projekt
@@ -197,10 +197,12 @@ jttp.reporting.answer.2.5=Felhaszn\u00e1l\u00f3/Csoport
 jttp.reporting.answer.2.6=Issue st\u00e1tusz
 jttp.reporting.answer.2.7=Issue t\u00edpus
 jttp.reporting.answer.2.8=Tetsz\u0151leges filter
+jttp.reporting.answer.2.9=Egy\u00e9b
 
 jttp.reporting.answer.3.1=Projekt
 jttp.reporting.answer.3.2=Issue
 jttp.reporting.answer.3.3=Felhaszn\u00e1l\u00f3
+jttp.reporting.answer.3.4=Egy\u00e9b
 
 jttp.reporting.answer.4.1=Le\u00edr\u00e1s
 jttp.reporting.answer.4.2=Id\u0151tartam
@@ -208,11 +210,11 @@ jttp.reporting.answer.4.3=Kezdeti/Befejez\u00e9si id\u0151
 jttp.reporting.answer.4.4=L\u00e9trehoz\u00e1s d\u00e1tuma
 jttp.reporting.answer.4.5=M\u00f3dos\u00edt\u00e1s d\u00e1tuma
 
-jttp.reporting.answer.5.1=Nem igaz\u00e1n
+jttp.reporting.answer.5.1=Egy\u00e1ltal\u00e1n nem
 jttp.reporting.answer.5.2=J\u00f3 lenne
 jttp.reporting.answer.5.3=Nagyon hasznos
 
-jttp.reporting.answer.6.1=Nem igaz\u00e1n
+jttp.reporting.answer.6.1=Egy\u00e1ltal\u00e1n nem
 jttp.reporting.answer.6.2=J\u00f3 lenne
 jttp.reporting.answer.6.3=Nagyon hasznos
 
