--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -197,10 +197,12 @@ jttp.reporting.answer.2.5=User/Group
 jttp.reporting.answer.2.6=Issue status
 jttp.reporting.answer.2.7=Issue type
 jttp.reporting.answer.2.8=Custom filter
+jttp.reporting.answer.2.9=Ohter
 
 jttp.reporting.answer.3.1=Project
 jttp.reporting.answer.3.2=Issue
 jttp.reporting.answer.3.3=User
+jttp.reporting.answer.3.4=Other
 
 jttp.reporting.answer.4.1=Description
 jttp.reporting.answer.4.2=Duration
@@ -208,11 +210,11 @@ jttp.reporting.answer.4.3=Start/End time
 jttp.reporting.answer.4.4=Created date
 jttp.reporting.answer.4.5=Updated date
 
-jttp.reporting.answer.5.1=Not very
+jttp.reporting.answer.5.1=Not at all
 jttp.reporting.answer.5.2=Nice to have
 jttp.reporting.answer.5.3=It's a must
 
-jttp.reporting.answer.6.1=Not very
+jttp.reporting.answer.6.1=Not at all
 jttp.reporting.answer.6.2=Nice to have
 jttp.reporting.answer.6.3=It's a must
 
