Fixed typo. Fixed css. Fixed onhashchange

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -197,7 +197,7 @@ jttp.reporting.answer.2.5=User/Group
 jttp.reporting.answer.2.6=Issue status
 jttp.reporting.answer.2.7=Issue type
 jttp.reporting.answer.2.8=Custom filter
-jttp.reporting.answer.2.9=Ohter
+jttp.reporting.answer.2.9=Other
 
 jttp.reporting.answer.3.1=Project
 jttp.reporting.answer.3.2=Issue
