--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -212,11 +212,11 @@ jttp.reporting.answer.4.5=Updated date
 
 jttp.reporting.answer.5.1=Not at all
 jttp.reporting.answer.5.2=Nice to have
-jttp.reporting.answer.5.3=It''s a must
+jttp.reporting.answer.5.3=It is a must
 
 jttp.reporting.answer.6.1=Not at all
 jttp.reporting.answer.6.2=Nice to have
-jttp.reporting.answer.6.3=It''s a must
+jttp.reporting.answer.6.3=It is a must
 
 jttp.reporting.answer.9.1=Key
 jttp.reporting.answer.9.2=Summary
