Added some feedback mail check and feedback frequency session check.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -232,3 +232,5 @@ jttp.reporting.answer.9.11=Created date
 jttp.reporting.answer.9.12=Updated date
 jttp.reporting.answer.9.13=Estimate
 jttp.reporting.answer.9.14=Remaining
+
+jttp.plugin.frequent.feedback=You cannot send more than one feedback within a short time period. Please try again later.
