--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -232,3 +232,5 @@ jttp.reporting.answer.9.11=L\u00e9trehoz\u00e1s d\u00e1tuma
 jttp.reporting.answer.9.12=M\u00f3dos\u00edt\u00e1s d\u00e1tuma
 jttp.reporting.answer.9.13=Becs\u00fclt id\u0151
 jttp.reporting.answer.9.14= H\u00e1tral\u00e9v\u0151 id\u0151
+
+jttp.plugin.frequent.feedback=Adott id\u0151n bel\u00fcl csak egy visszajelz\u00e9st k\u00fcldhet. K\u00e9rj\u00fck, pr\u00f3b\u00e1lja meg k\u00e9s\u0151bb.
