Nagy adag refaktor.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -76,7 +76,7 @@ plugin.setting.inline=Inline
 plugin.setting.both=Both types of calendars
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
-plugin.setting.working.day.help=By default all users have to fill at least 8 ours of working time for each working day. In case a user did not work 8 hours a day they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
+plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
 plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
 plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
@@ -102,12 +102,12 @@ plugin.setting.fdow=First day of the week
 plugin.setting.fdow.sunday=Sunday
 plugin.setting.fdow.monday=Monday
 plugin.settings.analytics=Analytics
-plugin.settings.analytics.help=The add-on collects anonymous usage data, which allows us to measure user experience. All  sensitive data is encrypted before being uploaded.
+plugin.settings.analytics.help=In order to enhance the features of the add-on, we need to understand how our customers use Timetracker. To achieve this, we would like to collect anonymous data about the usage: <ul> <li> Anonymized IP address (to be able to create statistics about the usage in the different countries) </li><li> Hash of the domain address of the JIRA system (we will not know your domain address) </li><li> Hash of the user (we will not know your original user id) </li><li> Usage count of the time tracking feature </li><li> Usage count of the Missing Days Report </li><li> Usage count of the Chart Report </li><li> Usage count of the Table Report </li><li> User Agent of the browser being used </li><li> Timetracker version number </li><li> JIRA version number </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enable
 plugin.settings.analytics.radiobutton.disable=Disable
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
-plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
+plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
 plugin.missing.days.nonworking=Excluding the non-working issues.
 plugin.statistics.message= The number of the queried dates is:
 plugin.no.dates= No date to display!
@@ -137,22 +137,100 @@ plugin.user.picker.label= Select a user
 jttp.close=Close
 jttp.send=Send
 jttp.send.feedback=Give feedback
-jttp.feedback.msg=Please provide your feedback below.
-jttp.feedback.header=Feedback
+jttp.feedback.msg=Please provide your feedback.
+jttp.feedback.header=Timetracker Feedback
 jttp.feedback.rate=Rate this plugin
 jttp.feedback.star1=Horrible
 jttp.feedback.star2=Bad
 jttp.feedback.star3=Meh
 jttp.feedback.star4=Good
 jttp.feedback.star5=Awesome
-jttp.feedback.customer.mail=Email address (optional)
+jttp.feedback.customer.mail=Email (optional)
 jttp.feedback.missing=Feedback text is required
 jttp.feedback.no.mail=No JIRA mail server has been defined
+jttp.feedback.mail.help=Please provide your e-mail address if you would like us to contact you about your feedback.  We will not use your email for any other purpose and we will never share it with any third party company.
 
 jttp.list.title.issue=Issue code to which the worklog belongs.
-jttp.list.title.remaning=Remaining time on the issue.
+jttp.list.title.remaining=Remaining time on the issue.
 jttp.list.title.start=Start date of the worklog.
 jttp.list.title.end=End date of the worklog.
 jttp.list.title.duration=The time between the start and the end date.
 jttp.list.title.note=Description of the worklog.
 jttp.list.title.actions=Edit, Delete, Copy
+
+jttp.nopermission.worklog.update=You don't have permission to update worklog in the issue:
+jttp.nopermission.worklog.delete=You don't have permission to delete worklog in the issue:
+jttp.nopermission.worklog.create=You don't have permission to create worklog in the issue:
+
+jttp.error.title=Timetracker error
+jttp.error.message.title=Something went wrong!
+jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
+
+jttp.reporting.header= Reporting feedback
+jttp.reporting.customer.mail=Email
+jttp.reporting.mail.help=Please provide your e-mail address if you would like us to contact you about your feedback.  We will not use your email for any other purpose and we will never share it with any third party company.
+jttp.reporting.no.mail=No JIRA mail server has been defined
+jttp.reporting.close=Close
+jttp.reporting.send=Send
+
+jttp.reporting.desc=Thank you for your interest. This feature is currently under development.<br/>We want to deliver a flexible work log reporting tool to facilitate the management team work.<br/><br/><strong>To make it even better, we would love to hear your thoughts about it.<strong/>
+jttp.reporting.question.1=Which view do you prefer?
+jttp.reporting.question.2=What search criterias would you use?
+jttp.reporting.question.3=What main dimensions would you use?
+jttp.reporting.question.4=Which detail of the logged work would you like to see?
+jttp.reporting.question.5=How useful would be a gadget to you?
+jttp.reporting.question.6=How useful would be various charts to you? (eg. Pie, Line, Bar)
+jttp.reporting.question.7=What kind of reports would be useful to you?
+jttp.reporting.question.8=Please let us know your suggestions or tell us if anything is missing.
+jttp.reporting.question.9=Which detail of the issue  would you like to see?
+
+jttp.reporting.answer.1.1=Table
+jttp.reporting.answer.1.2=List
+jttp.reporting.answer.1.3=Structured
+jttp.reporting.answer.1.4=Timesheet
+
+jttp.reporting.answer.2.1=Project
+jttp.reporting.answer.2.2=Issue
+jttp.reporting.answer.2.3=Component
+jttp.reporting.answer.2.4=Version
+jttp.reporting.answer.2.5=User/Group
+jttp.reporting.answer.2.6=Issue status
+jttp.reporting.answer.2.7=Issue type
+jttp.reporting.answer.2.8=Custom filter
+jttp.reporting.answer.2.9=Other
+
+jttp.reporting.answer.3.1=Project
+jttp.reporting.answer.3.2=Issue
+jttp.reporting.answer.3.3=User
+jttp.reporting.answer.3.4=Other
+
+jttp.reporting.answer.4.1=Description
+jttp.reporting.answer.4.2=Duration
+jttp.reporting.answer.4.3=Start/End time
+jttp.reporting.answer.4.4=Created date
+jttp.reporting.answer.4.5=Updated date
+
+jttp.reporting.answer.5.1=Not at all
+jttp.reporting.answer.5.2=Nice to have
+jttp.reporting.answer.5.3=It is a must
+
+jttp.reporting.answer.6.1=Not at all
+jttp.reporting.answer.6.2=Nice to have
+jttp.reporting.answer.6.3=It is a must
+
+jttp.reporting.answer.9.1=Key
+jttp.reporting.answer.9.2=Summary
+jttp.reporting.answer.9.3=Type
+jttp.reporting.answer.9.4=Status
+jttp.reporting.answer.9.5=Priority
+jttp.reporting.answer.9.6=Resolution
+jttp.reporting.answer.9.7=Versions
+jttp.reporting.answer.9.8=Components
+jttp.reporting.answer.9.9=Assignee
+jttp.reporting.answer.9.10=Reporter
+jttp.reporting.answer.9.11=Created date
+jttp.reporting.answer.9.12=Updated date
+jttp.reporting.answer.9.13=Estimate
+jttp.reporting.answer.9.14=Remaining
+
+jttp.plugin.frequent.feedback=You cannot send more than one feedback within a short time period. Please try again later.
