--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -76,7 +76,7 @@ plugin.setting.inline=\u00c1lland\u00f3
 plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa napt\u00e1r
 plugin.setting.current=Mai d\u00e1tum
 plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
-plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00e1l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151napnak sz\u00e1m\u00edt.
+plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak az id\u0151 k\u00f6vet\u00e9s (Time Tracking) be\u00e1ll\u00edt\u00e1sn\u00e1l megadott munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00e1l\u00f3 nem dolgozik ennyit egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151napnak sz\u00e1m\u00edt.
 plugin.setting.exclude.dates=Nem sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.include.dates=Bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00fa napt\u00e1rt a Timetracker oldal\u00e1n.
@@ -102,12 +102,12 @@ plugin.setting.fdow=A h\u00e9t els\u0151 napja
 plugin.setting.fdow.sunday=Vas\u00e1rnap
 plugin.setting.fdow.monday=H\u00e9tf\u0151
 plugin.settings.analytics=Analitika
-plugin.settings.analytics.help=A felhaszn\u00e1l\u00f3i \u00e9lm\u00e9ny jav\u00edt\u00e1sa \u00e9rdek\u00e9ben ez az add-on haszn\u00e1lati adatokat gy\u0171jt. Minden \u00e9rz\u00e9keny adat titkos\u00edt\u00e1sra ker\u00fcl.
+plugin.settings.analytics.help=Annak \u00e9rdek\u00e9ben, hogy min\u00e9l jobb \u00e9s hasznosabb \u00faj funkci\u00f3kkal tudjunk szolg\u00e1lni, szeretn\u00e9nk meg\u00e9rteni, hogy a felhaszn\u00e1l\u00f3k hogyan haszn\u00e1lj\u00e1k a Timetracker-t. Ehhez szeretn\u00e9nk az al\u00e1bbi anonim adatokat gy\u0171jteni az add-on haszn\u00e1lat\u00e1r\u00f3l: <ul><li> Anonimiz\u00e1lt IP-c\u00edm (geolok\u00e1ci\u00f3 meghat\u00e1roz\u00e1s\u00e1hoz) </li><li> A JIRA domian c\u00edm\u00e9nek hash-e (nem fogadjuk \u00e9s t\u00e1roljuk a val\u00f3di c\u00edmet) </li><li> A felhaszn\u00e1l\u00f3 azonos\u00edt\u00f3 hash-e (nem fogadjuk \u00e9s t\u00e1roljuk a val\u00f3di felhaszn\u00e1l\u00f3i azonos\u00edt\u00f3t) </li><li> A time tracking funkci\u00f3 haszn\u00e1lata </li><li> A Missing Days Report haszn\u00e1lata </li><li> A Chart Report haszn\u00e1lata </li><li> A Table Report haszn\u00e1lata </li><li> B\u00f6ng\u00e9sz\u0151 User Agent </li><li> Timetracker verzi\u00f3sz\u00e1m </li><li> JIRA verzi\u00f3sz\u00e1m </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enged\u00e9lyez
 plugin.settings.analytics.radiobutton.disable=Letilt
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
-plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
+plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint az elv\u00e1rt munkaid\u0151 egy napra.
 plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa.
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1ltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma:
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
@@ -138,7 +138,7 @@ jttp.close=Bez\u00e1r\u00e1s
 jttp.send=K\u00fcld\u00e9s
 jttp.send.feedback=\u00c9rt\u00e9kelem a programot
 jttp.feedback.msg=\u00cdrja le \u00e9szrev\u00e9teleit
-jttp.feedback.header=\u00c9szrev\u00e9telek
+jttp.feedback.header=Timetracker \u00e9szrev\u00e9telek
 jttp.feedback.rate=\u00c9rt\u00e9kelje a plugint
 jttp.feedback.star1=Sz\u00f6rny\u0171
 jttp.feedback.star2=Rossz
@@ -148,11 +148,89 @@ jttp.feedback.star5=Fantasztikus
 jttp.feedback.customer.mail=Email c\u00edm (opcion\u00e1lis)
 jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6telez\u0151
 jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
+jttp.feedback.mail.help=K\u00e9rem adja meg az email c\u00edm\u00e9t, ha szeretn\u00e9, hogy a visszajelz\u00e9se kapcs\u00e1n felvegy\u00fck \u00d6nnel a kapcsolatot. A megadott email c\u00edmet m\u00e1s c\u00e9lra nem haszn\u00e1ljuk fel, azt harmadik f\u00e9lnek nem adjuk ki.
 
 jttp.list.title.issue=Az Issue, amihez a k\u00f6nyvelt id\u0151 tartozik.
-jttp.list.title.remaning=Fennmarad\u00f3 id\u0151 az Issue-n.
+jttp.list.title.remaining=Fennmarad\u00f3 id\u0151 az Issue-n.
 jttp.list.title.start=A k\u00f6nyvelt id\u0151 kezdete.
 jttp.list.title.end=A k\u00f6nyvelt id\u0151 v\u00e9ge.
 jttp.list.title.duration=A k\u00f6nyvelt id\u0151 kezdete \u00e9s v\u00e9ge k\u00f6z\u00f6tti id\u0151.
 jttp.list.title.note=Az elv\u00e9gzett munka le\u00edr\u00e1sa.
 jttp.list.title.actions=Szerkeszt\u00e9s, T\u00f6rl\u00e9s, M\u00e1sol\u00e1s
+
+jttp.nopermission.worklog.update=Nincs jogosults\u00e1god worklogot szerkeszteni a issue-n:
+jttp.nopermission.worklog.delete=Nincs jogosults\u00e1god worklogot t\u00f6r\u00f6lni a issue-n:
+jttp.nopermission.worklog.create=Nincs jogosults\u00e1god worklogot l\u00e9trehozni a issue-n:
+
+jttp.error.title=Timetracker error
+jttp.error.message.title=Sajn\u00e1latos m\u00f3don hiba t\u00f6rt\u00e9nt!
+jttp.error.message.detials=K\u00e9rem jelezze a hib\u00e1t sz\u00e1munkra a Timetracker felhaszn\u00e1l\u00f3i visszajelz\u00e9s funcki\u00f3j\u00e1val, hogy azt min\u00e9l hamarabb jav\u00edthassuk. A visszajelz\u00e9s\u00e9ben \u00edrja le a hiba kiv\u00e1lt\u00e1sa el\u0151tti l\u00e9p\u00e9seket, hogy reproduk\u00e1lni tudjuk azt.
+
+jttp.reporting.header= Reporting \u00e9szrev\u00e9telek
+jttp.reporting.customer.mail=Email c\u00edm
+jttp.reporting.mail.help=K\u00e9rem adja meg az email c\u00edm\u00e9t, ha szeretn\u00e9, hogy a visszajelz\u00e9se kapcs\u00e1n felvegy\u00fck \u00d6nnel a kapcsolatot. A megadott email c\u00edmet m\u00e1s c\u00e9lra nem haszn\u00e1ljuk fel, azt harmadik f\u00e9lnek nem adjuk ki.
+jttp.reporting.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
+jttp.reporting.close=Bez\u00e1r\u00e1s
+jttp.reporting.send=K\u00fcld\u00e9s
+
+jttp.reporting.desc=K\u00f6sz\u00f6nj\u00fck az \u00e9rdekl\u0151d\u00e9s\u00e9t! Ez a funkci\u00f3 jelenleg fejleszt\u00e9s alatt \u00e1ll.<br/>Szeretn\u00e9nk egy k\u00f6nnyen kezelhet\u0151 \u00e9s rugalmas munkanapl\u00f3 ki\u00e9rt\u00e9kel\u0151 eszk\u00f6zt ny\u00fajtani, ami megk\u00f6nny\u00edti a vezet\u0151s\u00e9g munk\u00e1j\u00e1t.<br/><br/><strong>Ehhez szeretn\u00e9nk most a seg\u00edts\u00e9g\u00e9t k\u00e9rni. K\u00e9rj\u00fck, t\u00f6ltse ki a k\u00e9rd\u0151\u00edvet, hogy a legjobban megfelelj\u00fcnk az ig\u00e9nyeinek!<strong/>
+jttp.reporting.question.1=Milyen megjelen\u00edt\u00e9si form\u00e1t kedvel?
+jttp.reporting.question.2=Milyen keres\u00e9si felt\u00e9teleket haszn\u00e1lna?
+jttp.reporting.question.3=Milyen f\u0151 dimenzi\u00f3k ment\u00e9n szeretn\u00e9 az adatokat vizsg\u00e1lni?
+jttp.reporting.question.4=Milyen r\u00e9szleteket szeretne l\u00e1tni a k\u00f6nyvelt munkaid\u0151r\u0151l?
+jttp.reporting.question.5=Mennyire lenne hasznos egy a JIRA f\u0151k\u00e9perny\u0151n megjelen\u0151 k\u00f6nyvelt munkaid\u0151t \u00f6sszes\u00edt\u0151 "gadget"?
+jttp.reporting.question.6=Mennyire lenn\u00e9nek hasznosak a k\u00fcl\u00f6nb\u00f6z\u0151 diagramok k\u00f6nyvelt munkaid\u0151 megjelen\u00edt\u00e9s\u00e9re? (pl. Pie, Line, Bar)
+jttp.reporting.question.7=Milyen kimutat\u00e1sok lenn\u00e9nek hasznosak az \u00d6n sz\u00e1m\u00e1ra?
+jttp.reporting.question.8=K\u00e9rj\u00fck, \u00edrja le javaslatait, \u00f6tleteit!
+jttp.reporting.question.9=Milyen r\u00e9szleteket szeretne l\u00e1tni az Issue-r\u00f3l?
+
+jttp.reporting.answer.1.1=T\u00e1bl\u00e1zat
+jttp.reporting.answer.1.2=Lista
+jttp.reporting.answer.1.3=Struktur\u00e1lt
+jttp.reporting.answer.1.4=Timesheet
+
+jttp.reporting.answer.2.1=Projekt
+jttp.reporting.answer.2.2=Issue
+jttp.reporting.answer.2.3=Komponens
+jttp.reporting.answer.2.4=Verzi\u00f3
+jttp.reporting.answer.2.5=Felhaszn\u00e1l\u00f3/Csoport
+jttp.reporting.answer.2.6=Issue st\u00e1tusz
+jttp.reporting.answer.2.7=Issue t\u00edpus
+jttp.reporting.answer.2.8=Tetsz\u0151leges filter
+jttp.reporting.answer.2.9=Egy\u00e9b
+
+jttp.reporting.answer.3.1=Projekt
+jttp.reporting.answer.3.2=Issue
+jttp.reporting.answer.3.3=Felhaszn\u00e1l\u00f3
+jttp.reporting.answer.3.4=Egy\u00e9b
+
+jttp.reporting.answer.4.1=Le\u00edr\u00e1s
+jttp.reporting.answer.4.2=Id\u0151tartam
+jttp.reporting.answer.4.3=Kezdeti/Befejez\u00e9si id\u0151
+jttp.reporting.answer.4.4=L\u00e9trehoz\u00e1s d\u00e1tuma
+jttp.reporting.answer.4.5=M\u00f3dos\u00edt\u00e1s d\u00e1tuma
+
+jttp.reporting.answer.5.1=Egy\u00e1ltal\u00e1n nem
+jttp.reporting.answer.5.2=J\u00f3 lenne
+jttp.reporting.answer.5.3=Nagyon hasznos
+
+jttp.reporting.answer.6.1=Egy\u00e1ltal\u00e1n nem
+jttp.reporting.answer.6.2=J\u00f3 lenne
+jttp.reporting.answer.6.3=Nagyon hasznos
+
+jttp.reporting.answer.9.1=Azonos\u00edt\u00f3
+jttp.reporting.answer.9.2=Le\u00edr\u00e1s
+jttp.reporting.answer.9.3=T\u00edpus
+jttp.reporting.answer.9.4=St\u00e1tusz
+jttp.reporting.answer.9.5=Priorit\u00e1s
+jttp.reporting.answer.9.6=Megold\u00e1sa
+jttp.reporting.answer.9.7=Verzi\u00f3k
+jttp.reporting.answer.9.8=Komponensek
+jttp.reporting.answer.9.9=Hozz\u00e1rendelt
+jttp.reporting.answer.9.10=Felel\u0151s
+jttp.reporting.answer.9.11=L\u00e9trehoz\u00e1s d\u00e1tuma
+jttp.reporting.answer.9.12=M\u00f3dos\u00edt\u00e1s d\u00e1tuma
+jttp.reporting.answer.9.13=Becs\u00fclt id\u0151
+jttp.reporting.answer.9.14= H\u00e1tral\u00e9v\u0151 id\u0151
+
+jttp.plugin.frequent.feedback=Adott id\u0151n bel\u00fcl csak egy visszajelz\u00e9st k\u00fcldhet. K\u00e9rj\u00fck, pr\u00f3b\u00e1lja meg k\u00e9s\u0151bb.
