Reporting dialog description updated.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -173,7 +173,7 @@ jttp.reporting.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00
 jttp.reporting.close=Bez\u00e1r\u00e1s
 jttp.reporting.send=K\u00fcld\u00e9s
 
-jttp.reporting.desc=K\u00f6sz\u00f6nj\u00fck az \u00e9rdekl\u0151d\u00e9s\u00e9t! Ez a funkci\u00f3 jelenleg fejleszt\u00e9s alatt \u00e1ll.<br/>Szeretn\u00e9nk egy k\u00f6nnyen kezelhet\u0151 \u00e9s rugalmas munkanapl\u00f3 ki\u00e9rt\u00e9kel\u0151 eszk\u00f6zt ny\u00fajtani, ami megk\u00f6nny\u00edti a vezet\u0151s\u00e9g munk\u00e1j\u00e1t.<br/><br/><strong>Ehhez szeretn\u00e9nk most a seg\u00edts\u00e9g\u00e9t k\u00e9rni. K\u00e9rj\u00fck, t\u00f6ltse ki a k\u00e9rd\u0151\u00edvet, hogy a legjobban megfelelj\u00fcnk az ig\u00e9nyeinek!<strong/>
+jttp.reporting.desc=Ez a funkci\u00f3 jelenleg fejleszt\u00e9s alatt \u00e1ll.<br/><br/>K\u00f6sz\u00f6nj\u00fck az eddig \u00e9rkezett visszajelz\u00e9seket \u00e9s javaslatokat!<br/>A funkci\u00f3n jelenleg is dolgozunk, \u00e9s <strong>terveink szerint \u00e1prilis els\u0151 fel\u00e9ben el\u00e9rhet\u0151 lesz.<strong/><br/><br/><strong>Ehhez szeretn\u00e9nk most a seg\u00edts\u00e9g\u00e9t k\u00e9rni. K\u00e9rj\u00fck, t\u00f6ltse ki a k\u00e9rd\u0151\u00edvet, hogy a legjobban megfelelj\u00fcnk az ig\u00e9nyeinek!<strong/>
 jttp.reporting.question.1=Milyen megjelen\u00edt\u00e9si form\u00e1t kedvel?
 jttp.reporting.question.2=Milyen keres\u00e9si felt\u00e9teleket haszn\u00e1lna?
 jttp.reporting.question.3=Milyen f\u0151 dimenzi\u00f3k ment\u00e9n szeretn\u00e9 az adatokat vizsg\u00e1lni?
