--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -23,3 +23,49 @@ jtrp.plugin.reporting.pagination=Oldalm\u00e9ret
 jtrp.plugin.reporting.pagination.desc=A Worklog details \u00e9s a Quick summary riportok lapm\u00e9ret\u00e9nek be\u00e1ll\u00edt\u00e1sa. Be\u00e1ll\u00edthat\u00f3, hogy az adatok maximum h\u00e1ny sorban jelenjenek meg egy lapon.
 jtrp.plugin.reporting.non.working=Ne haszn\u00e1lja a Non-working issue-kat
 jtrp.plugin.reporting.non.working.desc=V\u00e1lassza ki ezt az opci\u00f3t, ha nem akarja hogy a Reporting list\u00e1zza azokat az Issue-kat, \u00e9s ne sz\u00e1moljon az azokhoz tartoz\u00f3 worklog-okkal, amiket a Global Settings oldal\u00e1n nem val\u00f3s munka feladatk\u00e9nt jel\u00f6lt meg.
+
+jtrp.report.wd.col.affectedVersions=Affected Versions
+jtrp.report.wd.col.assignee=Assignee
+jtrp.report.wd.col.components=Components
+jtrp.report.wd.col.created=Created
+jtrp.report.wd.col.estimated=Estimated
+jtrp.report.wd.col.fixVersions=Fix Versions
+jtrp.report.wd.col.issueKey=Issue Key
+jtrp.report.wd.col.issueSummary=Issue Summary
+jtrp.report.wd.col.priority=Priority
+jtrp.report.wd.col.project=Project
+jtrp.report.wd.col.projectDescription=Project Description
+jtrp.report.wd.col.remainingTime=Remaining
+jtrp.report.wd.col.reporter=Reporter
+jtrp.report.wd.col.resolution=Resolution
+jtrp.report.wd.col.startTime=Start Time
+jtrp.report.wd.col.status=Status
+jtrp.report.wd.col.timeSpent=Time Spent
+jtrp.report.wd.col.type=Type
+jtrp.report.wd.col.updated=Updated
+jtrp.report.wd.col.user=User
+jtrp.report.wd.col.worklogCreated=Worklog Created
+jtrp.report.wd.col.worklogDescription=Worklog Description
+jtrp.report.wd.col.worklogUpdated=Worklog Updated
+
+jtrp.report.ps.col.estimated=Estimated
+jtrp.report.ps.col.expectedTotal=Expected Total
+jtrp.report.ps.col.expectedTotalVsEstimated=Expected Total vs Estimated
+jtrp.report.ps.col.loggedVsEstimated=Logged vs Estimated
+jtrp.report.ps.col.project=Project
+jtrp.report.ps.col.projectDescription=Project Description
+jtrp.report.ps.col.remaining=Remaining
+jtrp.report.ps.col.totalLogged=Total Logged
+
+jtrp.report.is.col.assignee=Assignee
+jtrp.report.is.col.estimated=Estimated
+jtrp.report.is.col.issue=Issue
+jtrp.report.is.col.issueSummary=Issue Summary
+jtrp.report.is.col.priority=Priority
+jtrp.report.is.col.remaining=Remaining
+jtrp.report.is.col.status=Status
+jtrp.report.is.col.totalLogged=Total Logged
+jtrp.report.is.col.type=Type
+
+jtrp.report.us.col.totalLogged=Total Logged
+jtrp.report.us.col.user=User
