Ongoing development (working qeury result show, but not optimalized)

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -22,48 +22,48 @@ jtrp.plugin.reporting.permission.desc=By default all users have permission to vi
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
 
-jtrp.report.wd.col.affectedVersions=Affected Versions
-jtrp.report.wd.col.assignee=Assignee
-jtrp.report.wd.col.components=Components
-jtrp.report.wd.col.created=Created
-jtrp.report.wd.col.estimated=Estimated
-jtrp.report.wd.col.fixVersions=Fix Versions
-jtrp.report.wd.col.issueKey=Issue Key
-jtrp.report.wd.col.issueSummary=Issue Summary
-jtrp.report.wd.col.priority=Priority
-jtrp.report.wd.col.project=Project
-jtrp.report.wd.col.projectDescription=Project Description
-jtrp.report.wd.col.remainingTime=Remaining
-jtrp.report.wd.col.reporter=Reporter
-jtrp.report.wd.col.resolution=Resolution
-jtrp.report.wd.col.startTime=Start Time
-jtrp.report.wd.col.status=Status
-jtrp.report.wd.col.timeSpent=Time Spent
-jtrp.report.wd.col.type=Type
-jtrp.report.wd.col.updated=Updated
-jtrp.report.wd.col.user=User
-jtrp.report.wd.col.worklogCreated=Worklog Created
-jtrp.report.wd.col.worklogDescription=Worklog Description
-jtrp.report.wd.col.worklogUpdated=Worklog Updated
+jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
+jtrp.report.wd.col.jtrp_col_assignee=Assignee
+jtrp.report.wd.col.jtrp_col_components=Components
+jtrp.report.wd.col.jtrp_col_created=Created
+jtrp.report.wd.col.jtrp_col_estimated=Estimated
+jtrp.report.wd.col.jtrp_col_fixVersions=Fix Versions
+jtrp.report.wd.col.jtrp_col_issueKey=Issue Key
+jtrp.report.wd.col.jtrp_col_issueSummary=Issue Summary
+jtrp.report.wd.col.jtrp_col_priority=Priority
+jtrp.report.wd.col.jtrp_col_project=Project
+jtrp.report.wd.col.jtrp_col_projectDescription=Project Description
+jtrp.report.wd.col.jtrp_col_remainingTime=Remaining
+jtrp.report.wd.col.jtrp_col_reporter=Reporter
+jtrp.report.wd.col.jtrp_col_resolution=Resolution
+jtrp.report.wd.col.jtrp_col_startTime=Start Time
+jtrp.report.wd.col.jtrp_col_status=Status
+jtrp.report.wd.col.jtrp_col_timeSpent=Time Spent
+jtrp.report.wd.col.jtrp_col_type=Type
+jtrp.report.wd.col.jtrp_col_updated=Updated
+jtrp.report.wd.col.jtrp_col_user=User
+jtrp.report.wd.col.jtrp_col_worklogCreated=Worklog Created
+jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
+jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 
-jtrp.report.ps.col.estimated=Estimated
-jtrp.report.ps.col.expectedTotal=Expected Total
-jtrp.report.ps.col.expectedTotalVsEstimated=Expected Total vs Estimated
-jtrp.report.ps.col.loggedVsEstimated=Logged vs Estimated
-jtrp.report.ps.col.project=Project
-jtrp.report.ps.col.projectDescription=Project Description
-jtrp.report.ps.col.remaining=Remaining
-jtrp.report.ps.col.totalLogged=Total Logged
+jtrp.report.ps.col.jtrp_col_estimated=Estimated
+jtrp.report.ps.col.jtrp_col_expectedTotal=Expected Total
+jtrp.report.ps.col.jtrp_col_expectedTotalVsEstimated=Expected Total vs Estimated
+jtrp.report.ps.col.jtrp_col_loggedVsEstimated=Logged vs Estimated
+jtrp.report.ps.col.jtrp_col_project=Project
+jtrp.report.ps.col.jtrp_col_projectDescription=Project Description
+jtrp.report.ps.col.jtrp_col_remaining=Remaining
+jtrp.report.ps.col.jtrp_col_totalLogged=Total Logged
 
-jtrp.report.is.col.assignee=Assignee
-jtrp.report.is.col.estimated=Estimated
-jtrp.report.is.col.issue=Issue
-jtrp.report.is.col.issueSummary=Issue Summary
-jtrp.report.is.col.priority=Priority
-jtrp.report.is.col.remaining=Remaining
-jtrp.report.is.col.status=Status
-jtrp.report.is.col.totalLogged=Total Logged
-jtrp.report.is.col.type=Type
+jtrp.report.is.col.jtrp_col_assignee=Assignee
+jtrp.report.is.col.jtrp_col_estimated=Estimated
+jtrp.report.is.col.jtrp_col_issue=Issue
+jtrp.report.is.col.jtrp_col_issueSummary=Issue Summary
+jtrp.report.is.col.jtrp_col_priority=Priority
+jtrp.report.is.col.jtrp_col_remaining=Remaining
+jtrp.report.is.col.jtrp_col_status=Status
+jtrp.report.is.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.is.col.jtrp_col_type=Type
 
-jtrp.report.us.col.totalLogged=Total Logged
-jtrp.report.us.col.user=User
+jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.us.col.jtrp_col_user=User
