write not browsable project sheet to workbook. Throw exception when projectIds is empty after collect browsable projects.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -17,6 +17,7 @@ plugin.save= Save
 plugin.reset=Reset
 plugin.cancel=Cancel
 
+
 jtrp.plugin.reporting.permission=Permission to use Reporting
 jtrp.plugin.reporting.permission.desc=By default all users have permission to view and use Timetracker Reporting. If you would like to restrict usability, you can add JIRA groups here that have permits to use Reporting.
 jtrp.plugin.reporting.pagination=Size of the pagination
@@ -67,3 +68,7 @@ jtrp.report.is.col.jtrp_col_type=Type
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
+
+jtrp.report.projectKeys=Project Keys
+
+jtrp.repor.no_browsable_project_ids=Not selected browsable projects.
