--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -67,3 +67,7 @@ jtrp.report.is.col.jtrp_col_type=Type
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
+
+jtrp.report.projectKeys=Project Keys
+
+jtrp.repor.no_browsable_project_ids=Not selected browsable projects.
