--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -47,21 +47,24 @@ jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 
 jtrp.report.ps.col.jtrp_col_estimated=Estimated
-jtrp.report.ps.col.jtrp_col_expectedTotal=Expected Total
+jtrp.report.ps.col.jtrp_col_expectedTotal=Total Expected
 jtrp.report.ps.col.jtrp_col_project=Project
 jtrp.report.ps.col.jtrp_col_projectDescription=Project Description
 jtrp.report.ps.col.jtrp_col_remaining=Remaining
 jtrp.report.ps.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
 
 jtrp.report.is.col.jtrp_col_assignee=Assignee
 jtrp.report.is.col.jtrp_col_estimated=Estimated
-jtrp.report.is.col.jtrp_col_issue=Issue
+jtrp.report.is.col.jtrp_col_issue=Issue Key
 jtrp.report.is.col.jtrp_col_issueSummary=Issue Summary
 jtrp.report.is.col.jtrp_col_priority=Priority
 jtrp.report.is.col.jtrp_col_remaining=Remaining
 jtrp.report.is.col.jtrp_col_status=Status
-jtrp.report.is.col.jtrp_col_totalLogged=Total Logged
+jtrp.report.is.col.jtrp_col_totalLogged=Logged
 jtrp.report.is.col.jtrp_col_type=Type
+jtrp.report.is.col.jtrp_col_expected=Expected
+jtrp.report.is.col.jtrp_col_expected.help=Logged + Remaining
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
@@ -69,3 +72,58 @@ jtrp.report.us.col.jtrp_col_user=User
 jtrp.report.projectKeys=Project Keys
 
 jtrp.repor.no_browsable_project_ids=Not selected browsable projects.
+
+jtrp.report.btn.create.report=Riport k\u00e9sz\u00edt\u00e9s
+jtrp.report.btn.columns=Oszlopok
+
+jtrp.report.btn.export=Export
+jtrp.report.btn.export.all=(Excel) Minden mez\u0151
+jtrp.report.btn.export.current=(Excel) Jelenlegi mez\u0151k
+
+jtrp.report.head.worklog.detials=Munkanapl\u00f3 r\u00e9szletek
+jtrp.report.head.quick.summary= \u00d6sszegz\u00e9s
+jtrp.report.grand.total=\u00d6sszes napl\u00f3zott id\u0151
+
+jtrp.picker.value.none=None
+jtrp.picker.no.resulution.value=No Resulution
+jtrp.picker.no.componenet.value=No Component
+jtrp.picker.current.user.value=Current User
+jtrp.picker.unassigned.value=Unassigned
+jtrp.picker.no.version.value=No version
+jtrp.picker.released.version.value=Released version
+jtrp.picker.unreleased.version.value=Unreleased version
+jtrp.picker.unresolved.value=Unresolved
+
+jtrp.picker.all.group=Group: All
+jtrp.picker.none.group=Group: None
+jtrp.picker.all.user=User: All
+jtrp.picker.none.user=User: All
+
+jtrp.picker.all.priority=Priority: All
+jtrp.picker.all.resulution=Resulution: All
+jtrp.picker.all.assigne=Assigne: All
+jtrp.picker.all.reporter=Reporter: All
+jtrp.picker.all.affects.version=Affects Version: All
+jtrp.picker.all.fix.version=Fix Version: All
+jtrp.picker.all.component=Component: All
+jtrp.picker.all.label=Label: All
+jtrp.picker.all.create.date=Create Date: All
+jtrp.picker.all.epic.name=Epic Name: All
+jtrp.picker.all.epic.link=Epic Link: All
+
+jtrp.picker.all.project=Project: All
+jtrp.picker.all.type=Type: All
+jtrp.picker.all.status=Status: All
+
+jtrp.picker.more.issue=Issue
+jtrp.picker.more.priority=Priority
+jtrp.picker.more.resulution=Resulution
+jtrp.picker.more.assigne=Assigne
+jtrp.picker.more.reporter=Reporter
+jtrp.picker.more.affects.version=Affects Version
+jtrp.picker.more.fix.version=Fix Version
+jtrp.picker.more.component=Component
+jtrp.picker.more.label=Label
+jtrp.picker.more.create.date=Create Date
+jtrp.picker.more.epic.name=Epic Name
+jtrp.picker.more.epic.link=Epic Link
