Design check and fixes.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -80,7 +80,7 @@ jtrp.report.btn.export=Export
 jtrp.report.btn.export.all=(Excel) All fields
 jtrp.report.btn.export.current=((Excel) Current Fields
 
-jtrp.report.head.worklog.detials=Worklog Detials
+jtrp.report.head.worklog.detials=Time Tracking Details
 jtrp.report.head.quick.summary=Quick Summary
 jtrp.report.grand.total=Grand Total Logged
 
@@ -110,6 +110,7 @@ jtrp.picker.all.label=Label: All
 jtrp.picker.all.create.date=Create Date: All
 jtrp.picker.all.epic.name=Epic Name: All
 jtrp.picker.all.epic.link=Epic Link: All
+jtrp.picker.all.resolution=Resolution: All
 
 jtrp.picker.all.project=Project: All
 jtrp.picker.all.type=Type: All
