--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -110,6 +110,7 @@ jtrp.picker.all.label=Label: All
 jtrp.picker.all.create.date=Create Date: All
 jtrp.picker.all.epic.name=Epic Name: All
 jtrp.picker.all.epic.link=Epic Link: All
+jtrp.picker.all.resolution=Resolution: All
 
 jtrp.picker.all.project=Project: All
 jtrp.picker.all.type=Type: All
