--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -49,7 +49,7 @@ jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 jtrp.report.ps.col.jtrp_col_estimated=Estimated
 jtrp.report.ps.col.jtrp_col_expectedTotal=Total Expected
 jtrp.report.ps.col.jtrp_col_project=Project
-jtrp.report.ps.col.jtrp_col_projectDescription=Project Description
+jtrp.report.ps.col.jtrp_col_projectKey=Key
 jtrp.report.ps.col.jtrp_col_remaining=Remaining
 jtrp.report.ps.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.ps.col.jtrp_col_expectedTotal.help=Total Logged + Remaining
