replace logo, add links to issue and project, fixed paging problem, add type icon to result.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -30,7 +30,7 @@ jtrp.report.wd.col.jtrp_col_estimated=Estimated
 jtrp.report.wd.col.jtrp_col_fixVersions=Fix Versions
 jtrp.report.wd.col.jtrp_col_issueKey=Issue Key
 jtrp.report.wd.col.jtrp_col_issueSummary=Issue Summary
-jtrp.report.wd.col.jtrp_col_priority=Priority
+jtrp.report.wd.col.jtrp_col_priority=P
 jtrp.report.wd.col.jtrp_col_project=Project
 jtrp.report.wd.col.jtrp_col_projectDescription=Project Description
 jtrp.report.wd.col.jtrp_col_remainingTime=Remaining
@@ -39,9 +39,10 @@ jtrp.report.wd.col.jtrp_col_resolution=Resolution
 jtrp.report.wd.col.jtrp_col_startTime=Start Time
 jtrp.report.wd.col.jtrp_col_status=Status
 jtrp.report.wd.col.jtrp_col_timeSpent=Time Spent
-jtrp.report.wd.col.jtrp_col_type=Type
+jtrp.report.wd.col.jtrp_col_type=T
 jtrp.report.wd.col.jtrp_col_updated=Updated
 jtrp.report.wd.col.jtrp_col_user=User
+jtrp.report.wd.col.jtrp_col_user.help=Worklog author display name
 jtrp.report.wd.col.jtrp_col_worklogCreated=Worklog Created
 jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
@@ -58,16 +59,17 @@ jtrp.report.is.col.jtrp_col_assignee=Assignee
 jtrp.report.is.col.jtrp_col_estimated=Estimated
 jtrp.report.is.col.jtrp_col_issue=Issue Key
 jtrp.report.is.col.jtrp_col_issueSummary=Issue Summary
-jtrp.report.is.col.jtrp_col_priority=Priority
+jtrp.report.is.col.jtrp_col_priority=P
 jtrp.report.is.col.jtrp_col_remaining=Remaining
 jtrp.report.is.col.jtrp_col_status=Status
 jtrp.report.is.col.jtrp_col_totalLogged=Logged
-jtrp.report.is.col.jtrp_col_type=Type
+jtrp.report.is.col.jtrp_col_type=T
 jtrp.report.is.col.jtrp_col_expected=Expected
 jtrp.report.is.col.jtrp_col_expected.help=Logged + Remaining
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
+jtrp.report.us.col.jtrp_col_user.help=Worklog author display name
 
 jtrp.report.projectKeys=Project Keys
 
