--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -116,6 +116,8 @@ jtrp.picker.all.project=Project: All
 jtrp.picker.all.type=Type: All
 jtrp.picker.all.status=Status: All
 
+jtrp.picker.none.filter=Filter: None
+
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
 jtrp.picker.more.resulution=Resulution
