--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -22,6 +22,9 @@ jtrp.plugin.reporting.permission.desc=By default all users have permission to vi
 jtrp.plugin.reporting.pagination=Size of the pagination
 jtrp.plugin.reporting.pagination.desc=Set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.
 
+plugin.wrong.jql=Invalid JQL in filter!
+jtrp.plugin.missing.jql=No filter selected!
+
 jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.wd.col.jtrp_col_assignee=Assignee
 jtrp.report.wd.col.jtrp_col_components=Components
