Fixed TODOs and some visual error.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -83,7 +83,7 @@ jtrp.report.btn.columns=Columns
 
 jtrp.report.btn.export=Export
 jtrp.report.btn.export.all=(Excel) All fields
-jtrp.report.btn.export.current=((Excel) Current Fields
+jtrp.report.btn.export.current=(Excel) Current Fields
 
 jtrp.report.head.worklog.detials=Time Tracking Details
 jtrp.report.head.quick.summary=Quick Summary
