--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -126,7 +126,7 @@ jtrp.picker.none.filter=Filter: None
 
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
-jtrp.picker.more.resulution=Resulution
+jtrp.picker.more.resulution=Resolution
 jtrp.picker.more.assigne=Assigne
 jtrp.picker.more.reporter=Reporter
 jtrp.picker.more.affects.version=Affects Version
