--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -34,7 +34,7 @@ jtrp.report.wd.col.jtrp_col_estimated=Estimated
 jtrp.report.wd.col.jtrp_col_fixVersions=Fix Versions
 jtrp.report.wd.col.jtrp_col_issueKey=Issue Key
 jtrp.report.wd.col.jtrp_col_issueSummary=Issue Summary
-jtrp.report.wd.col.jtrp_col_priority=T
+jtrp.report.wd.col.jtrp_col_priority=P
 jtrp.report.wd.col.jtrp_col_project=Project
 jtrp.report.wd.col.jtrp_col_projectDescription=Project Description
 jtrp.report.wd.col.jtrp_col_remainingTime=Remaining
@@ -126,7 +126,7 @@ jtrp.picker.none.filter=Filter: None
 
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
-jtrp.picker.more.resulution=Resulution
+jtrp.picker.more.resulution=Resolution
 jtrp.picker.more.assigne=Assigne
 jtrp.picker.more.reporter=Reporter
 jtrp.picker.more.affects.version=Affects Version
