Added tooltips to user and group picker.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -176,6 +176,10 @@ jtrp.picker.all.status=Status: All
 
 jtrp.picker.none.filter=Filter: None
 
+jtrp.picker.user.tooltip=Select users, or the none option to select from groups.
+jtrp.picker.group.tooltip=Select groups, or the none option to select from users.
+
+
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
 jtrp.picker.more.resulution=Resolution
