--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -176,6 +176,9 @@ jtrp.picker.all.status=Status: All
 
 jtrp.picker.none.filter=Filter: None
 
+jtrp.picker.user.tooltip=V\u00e1lasszon felhaszn\u00e1l\u00f3t, vagy a none opci\u00f3t csoport v\u00e1laszt\u00e1shoz.
+jtrp.picker.group.tooltip=V\u00e1lasszon csoportot, vagy a none opci\u00f3t felhaszn\u00e1l\u00f3 v\u00e1laszt\u00e1shoz.
+
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
 jtrp.picker.more.resulution=Resolution
